[package]
name = "inox_nodes"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
inox_resources = { path = "../resources" }
inox_filesystem = { path = "../filesystem" }
inox_serialize = { path = "../serialize" }
