[package]
name = "inox_nodes"
build = "build.rs"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
inox_resources = { path = "../resources" }
inox_filesystem = { path = "../filesystem" }
inox_log = { path = "../log" }
inox_profiler = { path = "../profiler" }
inox_serialize = { path = "../serialize" }
inox_uid = { path = "../uid" }
