[package]
name = "inox_platform"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]


[dependencies]
inox_commands = { path = "../commands" }
inox_messenger = { path = "../messenger" }
raw-window-handle = { workspace = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["console", 
    "AddEventListenerOptions",
    "CssStyleDeclaration",
    "BeforeUnloadEvent",
    "Document",
    "DomRect",
    "Element",
    "Event",
    "EventTarget",
    "FocusEvent",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyboardEvent",
    "MediaQueryList",
    "MediaQueryListEvent",
    "MouseEvent",
    "Node",
    "PointerEvent",
    "Window",
    "WheelEvent"
] }