[package]
name = "inox_platform"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]


[dependencies]
inox_commands = { path = "../commands" }
inox_messenger = { path = "../messenger" }
raw-window-handle = { workspace = true }


[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
x11-dl = "2.21.0"
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = [ "native-activity" ] }
ndk = "0.9"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }